// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cannot find major from non-present majorId 1`] = `
{
  "data": {
    "major": null,
  },
  "errors": [
    [GraphQLError: major not found!],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`cannot find majorOccurrence from non-present year 1`] = `
{
  "data": {
    "major": {
      "majorId": "computer-information-science/computer-science/bscs",
      "occurrence": null,
    },
  },
  "errors": [
    [GraphQLError: occurrence not found!],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`gets latest occurrence 1`] = `
{
  "data": {
    "major": {
      "latestOccurrence": {
        "spec": {
          "name": "Computer Science, BSCS",
          "yearVersion": 2018,
        },
        "yearVersion": "2018",
      },
      "majorId": "computer-information-science/computer-science/bscs",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`gets major from majorId 1`] = `
{
  "data": {
    "major": {
      "majorId": "computer-information-science/computer-science/bscs",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`gets specific occurrence 1`] = `
{
  "data": {
    "major": {
      "majorId": "computer-information-science/computer-science/bscs",
      "occurrence": {
        "plansOfStudy": [
          {
            "id": "0",
            "years": [
              1000,
            ],
          },
        ],
        "spec": {
          "name": "Computer Science, BSCS",
          "yearVersion": 2017,
        },
        "yearVersion": "2017",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
